# Mix-MCP

./: .air.toml  .gitignore  LICENSE  README.md  README_CN.md  go.mod  go.sum  main.go
configs/: conf.yaml
graphrag/ragtest/: settings.yaml
internal/pkg/mcp-client/: client.go
internal/pkg/mcp-server/: handler.go
internal/store/: exchange.go
internal/strategy/: breakout.go  dca.go  grid.go  grid_test.go  market_maker.go  tool.go
mcp_ai_predict/: README.md  main.py  mcp_app.py  package-lock.json  pyproject.toml  requirements.txt
mcp_ai_predict/eth_predict/: data_processor.py  predict_eth.py  train_eth.py  visualizer.py
mcp_yuyao/: README.md  data_fetcher.py  mcp_app.py  package-lock.json  package.json  requirements.txt  strategy.py  train_eth.py
mcp_yuyao/eth_predict/: file_manager.py  model.py  model_data_processor.py  predict_eth.py  train_eth.py
pkg/base/: base.go
pkg/config/: file.go  models.go
pkg/exchange/bitget/: client.go  client_test.go  tool.go
pkg/schema/: schema.go
static/: config.json
tmp/: mix-mcp
