[project]
name = "mcp_ai_predict"
version = "0.1.0"
description = "ETH交易策略AI预测系统"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.dependencies]
fastmcp = ">=0.1.0"
openai = ">=1.0.0"
pandas = ">=1.3.0"
numpy = ">=1.20.0"
matplotlib = ">=3.4.0"
seaborn = ">=0.11.0"
scikit-learn = ">=1.0.0"
torch = ">=1.9.0"
xgboost = ">=1.4.0"
python-dotenv = ">=0.19.0"
ccxt = ">=1.60.0"
joblib = ">=1.1.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_ai_predict"] 